--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Mening saytim</title>
-</head>
-<body>
-    <hr/>
+<!-- 1-video -->
+<!-- <!DOCTYPE html>  -->
+<!-- <html>
+    <head>
+        <title>Mening saytim</title>
+    </head>
+    <body>
+        <h1>Asosiy sarlavha</h1>
+        <h2>Heding 2</h2>
+        <h3>Heding 3</h3>
+        <h4>Heding 4</h4>
+        <h5>Heding 5</h5>
+        <h6>Heding 6</h6>
 
-    <div align="center">
-      <br>
-      <img alt="ilon" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMnM1a3RqZTJ3bHhkYTk2eHV6dHhjNzJvMHQxYW4wam5wbTk4aHIwbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QHE5gWI0QjqF2/giphy.gif" />
-      
-      <br/><br/><br/>
-    </div>
-    
-    <hr/>
-</body>
-</html>
+    </body>
+</html> -->
+<!-- 2-video -->
+<!-- <!DOCTYPE html> 
+
+<html>
+    <head>
+        <title>Mening saytim</title>
+    </head>
+    <body>
+        <h1>Salom</h1>
+        <p>
+            Displey chiroyli kavisli dizaynga mos keladigan yumaloq burchaklarga <br>
+             ega va bu burchaklar standart to'rtburchaklar ichida joylashgan <br>
+        </p>
+        <hr>
+        <p>
+            Batareyaning barcha da'volari tarmoq konfiguratsiyasiga va boshqa ko'plab <br>
+             omillarga bog'liq; haqiqiy natijalar farq qiladi
+        </p>
+        <h1>Alik</h1>
+        <p>iPhone 14 va iPhone 14 Plus chayqalish, suv va changga chidamli va IEC 60529 standarti <br>
+            (maksimal chuqurligi 6 metrdan 30 daqiqagacha) bo‘yicha IP68 reytingi bilan nazorat qilinadigan laboratoriya sharoitida sinovdan o‘tkazildi
+
+        </p>
+    </body>
+</html> -->
