--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!-- 8-video----------------------- -->
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Birinchi paragrf</title>
@@ -9,4 +9,4 @@
         <p>1-paragrf</p>
         <a href="index.html">1-sahifa</a>
     </body>
-</html>
+</html> -->
