--- a/4.html
+++ b/4.html
@@ -1,4 +1,4 @@
-<!-- 4-viedo----------------------------- -->
+4-viedo----------------------------- -->
 <!-- <!DOCTYPE html>
 <html>
     <head>
@@ -27,4 +27,4 @@
     x<sup>2</sup>
         
     </body>
-</html> -->
+</html>
