--- a/v3.html
+++ b/v3.html
@@ -2,19 +2,9 @@
 <html>
     <head>
         <title>salom</title>
-        <style>
-            #Birinchi{
-                color: red;
-                font-style: italic;
-                font-weight: bold;
-            }
-        </style>
     </head>
     <body>
-        <p id="Birinchi">Birinchi qism </p>
-        <p>ikkinchi qism </p>
-        <p>Uchinchi qism </p>
-        <p>tortinchi qism </p>
-        <p>Beshinchi qism</p>
+        <a href="https://google.ru">google ga otish <b> otish </b></a>
+        <a href="https://youtube.com">you tube ga otish</a>
     </body>
 </html>
